# image_to_grid_converter

map_to_jpeg/: CMakeLists.txt
map_to_jpeg/include/: HectorMapTools.h
map_to_jpeg/install/: local_setup.sh  setup.sh
map_to_jpeg/install/map_to_jpeg/share/map_to_jpeg/: package.bash  package.zsh
map_to_jpeg/log/: latest_build
map_to_jpeg/src/: image_to_map_node.cpp  map_to_image_node.cpp
